﻿IMPROVEMENTS / FIXES
- General:
	- Archive the defunct KSPedia files, reducing the size of the BDArmory zip file by around 24MB.
- AI:
	- Smoothly vary the roll target during gain alt behaviour from the surface normal to vertical to avoid clipping wings into terrain when taking off on uneven terrain.
- Vessel Spawning:
	- Adjust intra-team spacing to scale better with distance.
	- Fix the inward/outward facing direction when spawning teams and use the same facing direction for all members of a team.

v1.6.2.0
IMPROVEMENTS / FIXES
- General:
	- Fix TweakScale config for Typhoon engine (again).
	- Add Toggle/Enable/Disable pivot action groups to the Claw variants.
	- Add an action group option to give unlimited pivot range to the Claw variants.
	- Tweaks so that asteroids have the proper HP in flight mode.
	- Optimisation of some vector operations.
	- Adds variant texture for ground radars.
	- Fix SIDAM texture variants for standard brown or greyscale.
- Armor:
	- Make the adjustable armor 'clamped' and 'triangle type' options persistent and initialised correctly in the PAW.
- UI:
	- Adjust formatting of some debug telemetry.
	- Fix EMP Hellfire texture URL.
	- Add an indent for missile and CM settings.
- Vessel Mover:
	- Don't apply "Don't Avoid Collisions" while lowering vessels.
- Vessel Spawning:
	- Re-register EVA Kerbals in spawned vessels as active, since KSP de-registers this for some reason.
	- Add a default text for the custom template name field.
	- Automatically add the current custom template to the list if it's not already there when clicking 'save' without requiring clicking 'new' first. (I.e., don't require 'new'→'save' for the initial template.)
	- When using "Fill Seats" = "Cockpits or Combat Seat", include the first command seat if neither a cockpit nor combat seat are present.
	- Fix an issue with the spawning routine hanging when using asteroids game modes.
	- Fix the inward/outward spawn orientation for circular spawning.
- Detectors: