@@ -139,6 +139,7 @@ Localization
         #LOC_BDArmory_Settings_DebugRadar = Detectors
         #LOC_BDArmory_Settings_DebugSpawning = Spawning
         #LOC_BDArmory_Settings_DebugWeapons = Weapons
+        #LOC_BDArmory_Settings_ResetScrollZoom = Reset Scroll-Zoom
         #LOC_BDArmory_Settings_RemoteFiring = Remote Firing
         #LOC_BDArmory_Settings_ClearanceCheck = Clearance Check
         #LOC_BDArmory_Settings_AmmoGauges = Ammo Gauges
